@@ -1,5 +1,9 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.29.2
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Cosmetical fixed in manpage
+
 *eix-0.29.1
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Fallback to PORTDIR=/usr/portage, see
